# Hobby

./: .gitignore  Cargo.toml  README.md  build_shaders.sh  debug_info.md  hobby.sublime-project  vk_layer_settings.txt
examples/: base.rs  example.rs  triangle.rs
hobby/: Cargo.toml  build.rs  hobby.sublime-project
hobby/logs/: frame_time.csv
hobby/res/shaders/: basic.vert
hobby/source_assets/shaders/: default.frag
hobby/src/: config.rs  game.rs  lib.rs  settings.rs  timer.rs
hobby/src/core/: camera.rs  color.rs  mesh.rs  mod.rs  model.rs  texture.rs  transform.rs  vertex.rs
hobby/src/gpu/: buffer.rs  context.rs  mod.rs  pipeline.rs  texture.rs
hobby/src/graphics/: base.rs  buffers.rs  command_buffer.rs  mod.rs  render_pass.rs  renderer.rs  swapchain.rs  vk_mesh.rs
hobby/src/graphics/pipelines/: basic_pipeline.rs  mod.rs  mvp.rs  pipeline.rs  shader.rs
hobby/src/renderer/: base.rs  buffers.rs  command_buffer.rs  mod.rs  pipeline.rs  render_pass.rs  renderer.rs  shaders.rs  swapchain.rs  vk_mesh.rs
hobby/src/renderer/materials/: basic.rs  mod.rs  pipeline.rs  textured.rs
hobby/src/renderer/materials/shaders/: basic.vert  textured.frag  textured.vert
hobby/src/renderer/pipelines/: pipeline.rs  shader.rs
hobby/src/renderer/pipelines/shaders/: basic.frag
hobby/src/renderer/shaders/: default.frag  shader.rs
hobby/src/renderer/shaders/source/: basic.vert
hobby/src/tools/: duration_helper.rs  frame_timer.rs  gltf.rs  mod.rs  transform.rs
hobby/src/tools/gltf/: gltf_details.rs  gltf_loader.rs  mod.rs
logs/: frame_time.csv
notes/: Game.md  (+15 more)
(+74 files in other folders)
