[package]
name = "hobby"
version = "0.1.0"
authors = ["James Longino <james.longino@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.18"
log = "0.4"
failure = "0.1"
chrono = "0.4"
nalgebra = "0.16"
nalgebra-glm = "0.2"
image = "0.20"
ash = "0.27"
shaderc = "0.3"
memoffset = "0.2"

[dependencies.gltf]
version = "0.11"
features = ["names"]